# taiwan-license-plate-recognition

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  README.en.md  README.md  pyproject.toml  requirements.txt  ruff.toml
models/en_PP-OCRv3_det_distill_train/: student.pdparams
scripts/: det.sh
src/: main.py
src/license_plate_recognition/: PostProcess.py  Preprocess.py  __init__.py
src/scripts/: hyperparameter_tune.py  test.ipynb  test_combination.ipynb  test_combination.py  train.py
src/scripts/args/: train.json
src/scripts/detection/: hyperparameter_tune.py  train.py
src/scripts/ocr/: data_process.py  data_process_EasyOCR.py  evaluate_PaddleOCR.py  evaluate_TrOCR.py  fine_tune.py  fine_tune_TrOCR.py  fine_tune_TrOCR_OV.py  hyperparameter_tune_TrOCR.py  inference_TrOCR.py  test_ocr_method.ipynb  test_trocr.ipynb  train_easyOCR.py
src/scripts/ocr/arguments/: easyOCR.yaml
src/scripts/recognition/: data_process.py  download_det_data.py  download_det_dataset.py  download_models.py  download_rec_dataset.py  evaluate_EasyOCR.py  evaluate_PaddleOCR.py  evaluate_Tesseract.py  evaluate_TrOCR.py  labeling.py  test_labeling.ipynb  test_recognition_method.ipynb
src/scripts/recognition/arguments/: ch_PP-OCRv3_det_student.yml  ch_PP-OCRv4_rec_distillation.yml  detection.yml
src/scripts/yolo/: evaluate.py  hyperparameter_tune.py  train.py
src/taiwan_license_plate_recognition/: Helper.py  Load.py  PostProcess.py  Preprocess.py  Utils.py  __init__.py
src/taiwan_license_plate_recognition/detection/: PostProcess.py  __init__.py
src/taiwan_license_plate_recognition/recognition/: Metrics.py  PostProcess.py  __init__.py
