[project]
name = "taiwan-license-plate-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
	{ name = "hermeschen1116", email = "108386417+hermeschen1116@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
	"easyocr>=1.7.2",
	"opencv-python>=4.10.0.84",
	"pillow>=11.0.0",
	"pytesseract>=0.3.13",
	"torch>=2.4.1",
	"transformers>=4.44.2",
	"ultralytics==8.0.238",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
	"catppuccin-jupyterlab>=0.2.4",
	"commitizen>=3.30.0",
	"datasets>=3.0.2",
	"huggingface-hub>=0.26.2",
	"jupyter>=1.1.1",
	"openvino-dev>=2024.5.0",
	"optimum[nncf,openvino]>=1.23.3",
	"pip>=24.3.1",
	"pre-commit>=4.0.1",
	"python-dotenv>=1.0.1",
	"roboflow>=1.1.48",
	"wandb>=0.18.5",
]
